2010-05-17  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	reviewed by: Xavier Queralt

	* flumotion/component/feedcomponent.py:
	* flumotion/component/muxers/multipart.py:
	* flumotion/component/muxers/ogg.py:
	* flumotion/test/test_component_feedcomponent.py:
	Create MuxerComponent class for muxers to inherit.
	This makes muxers link only after receiving data and makes them
	link to the compatible sink pad template according to the caps
	of the data coming in.
	Add test to check pipeline string output is correct.

2010-05-14  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/component/misc/httpserver/httpserver.py:
	Increase httpserver set up messages log level.

2010-05-14  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/component/misc/porter/porter.py:
	Increase porter set up messages log level.

2010-05-13  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/assistant/models.py:
	Fix typo.

2010-05-07  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Julien Le Goff  <jlegoff@flumotion.com>

	* flumotion/component/misc/httpserver/cachemanager.py:
	* flumotion/test/test_component_providers.py:
	Start and stop plug in LocalPathCachedProvider setup()/teardown().

	This fixes the race condition in the test suite execution, and
	removes the need for the ProcessOutputHelper wrapper.

2010-05-06  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/common/testsuite.py:
	* flumotion/test/test_common_eventcalendar.py:
	* flumotion/test/test_component_disker.py:
	* flumotion/test/test_component_httpserver.py:
	* flumotion/test/test_component_httpserver_httpcached_strategy.py:
	* flumotion/test/test_component_httpstreamer.py:
	* flumotion/test/test_component_padmonitor.py:
	* flumotion/test/test_comptest.py:
	* flumotion/test/test_dialogs.py:
	* flumotion/test/test_greeter.py:
	* flumotion/test/test_server_selector.py:
	* flumotion/test/test_testclasses.py: