@@ -22,7 +22,7 @@
 from flumotion.common.testsuite import TestCase
 from flumotion.component import feedcomponent
 from flumotion.component.eater import Eater
-from twisted.internet import defer
+from twisted.internet import defer, gtk2reactor
 
 
 class FakeMuxerComponent(feedcomponent.MuxerComponent):
@@ -50,6 +50,8 @@ class FeedComponentMedium(feedcomponent.FeedComponentMedium):
 
 
 class TestFeedComponentMedium(TestCase):
+
+    supportedReactors = [gtk2reactor.Gtk2Reactor]
 
     def setUp(self):
         config = {}
@@ -101,6 +103,8 @@ class TestFeedComponentMedium(TestCase):
 
 
 class TestMuxer(TestCase):
+
+    supportedReactors = [gtk2reactor.Gtk2Reactor]
 
     def setup(self):
         self.fakecomp = None
